[gd_scene load_steps=4 format=3 uid="uid://ui6tx2v5jtlk"]

[ext_resource type="Script" uid="uid://dgjdjw5xdk1fp" path="res://scripts/components/dialogue_component.gd" id="1_cp4pg"]
[ext_resource type="Texture2D" uid="uid://t6dbgijgk2fa" path="res://assets/images/keys/kenney_input-prompts_1.4/Keyboard & Mouse/Double/keyboard_e.png" id="2_3s7ya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3s7ya"]
radius = 64.0

[node name="DialogueComponent" type="Node2D"]
script = ExtResource("1_cp4pg")

[node name="DialgouePrompt" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.183594, 0.183594)
texture = ExtResource("2_3s7ya")

[node name="DialogueArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]
shape = SubResource("CircleShape2D_3s7ya")
